Update social links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
                     <span class="text-part left">Hi, I'm</span>
                     <span class="text-part right">Gowthaman</span>
                 </div>
-                <p>A Passionate Web Developer</p>
+                <p>A Passionate Software Engineer</p>
             </div>
 
             <!-- <div class="hero-text">
@@ -217,10 +218,19 @@
         </div>
     </section>
 
-    <section id="contact" class="contact fade-in-section">
+    <section class="contact" id="contact">
         <div class="container">
             <h2>Contact Me</h2>
-            <p>Email: gowthaman@example.com</p>
+            <p>If you'd like to get in touch, feel free to reach out or follow me on my social platforms below.</p>
+
+            <div class="social-links">
+                <a href="https://github.com/gowtham3418" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                <a href="https://www.linkedin.com/in/gowthaman--saravanan" target="_blank"><i
+                        class="fab fa-linkedin"></i>
+                    LinkedIn</a>
+                <!-- <a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i> Twitter</a> -->
+                <a href="mailto:gowthaman3418@gmail.com"><i class="fas fa-envelope"></i> Email</a>
+            </div>
         </div>
     </section>
 
