Add wave animation in hero container

--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
         </div>
     </section>
 
+
+    <svg viewBox="0 0 2 1" preserveAspectRatio="none">
+        <defs>
+            <path id="w" d="
+        m0 1v-.5 
+        q.5.5 1 0
+        t1 0 1 0 1 0
+        v.5z" />
+        </defs>
+        <g>
+            <use href="#w" y=".1" fill="#ff6347" />
+            <use href="#w" y=".2" fill="#ff9966" />
+        </g>
+    </svg>
+
     <section id="about" class="about fade-in-section">
         <div class="container">
             <h2>About Me</h2>
