Update github url

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <p>If you'd like to get in touch, feel free to reach out or follow me on my social platforms below.</p>
 
             <div class="social-links">
-                <a href="https://github.com/gowtham3418" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                <a href="https://github.com/gowthaman-tech" target="_blank"><i class="fab fa-github"></i> GitHub</a>
                 <a href="https://www.linkedin.com/in/gowthaman--saravanan" target="_blank"><i
                         class="fab fa-linkedin"></i>
                     LinkedIn</a>
