--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <header class="header">
         <div class="container">
             <h1 class="logo"><a href="#home">Gowthaman</a></h1>
+
+            <!-- Hamburger Checkbox & Icon -->
+            <input type="checkbox" id="menu-toggle" class="menu-toggle">
+            <label for="menu-toggle" class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </label>
+
             <nav class="nav">
                 <a href="#about">About</a>
                 <a href="#education">Education</a>
