change project content

--- a/index.html
+++ b/index.html
@@ -207,16 +207,10 @@
                 </div>
                 <div class="project-card">
                     <h3>SBAS - Safety Behavioral Analysis System</h3>
-                    <p>Developed a system for analyzing road safety behavior by presenting driver customers with timed
-                        question sessions. The system supports various question types, including text, audio, video, and
-                        selection-based questions, with answers submitted using QR codes. The goal is to assess drivers'
-                        road safety behaviors and generate reports based on their individual scores. Implemented
-                        session-based question delivery, where drivers answer different types of questions (text, audio,
-                        video, multiple-choice) within a specified time. Integrated QR code functionality for easy
-                        question submission, enhancing user convenience. Created dynamic reports that analyze and
-                        display drivers’ safety behavior, allowing organizations to track progress and identify areas
-                        for improvement. Built a responsive frontend using ReactJS, providing a smooth user experience
-                        across devices.</p>
+                    <p>Developed a system to assess drivers' road safety behavior through timed question sessions,
+                        supporting text, audio, video, and multiple-choice formats. Integrated QR code-based answer
+                        submissions and generated dynamic reports to track individual scores. Built a responsive ReactJS
+                        frontend for a smooth, device-friendly experience.</p>
                     <span><b>Technologies Used:</b> PHP (Backend), ReactJS (Frontend), MySQL </span>
                 </div>
 
